# huff2

./: Cargo.toml  README.md  rustfmt.toml
.github/: ci.yml
.github/workflows/: ci.yml
ast/: Cargo.toml
ast/src/: grammar.lalrpop  lib.rs  parser.rs
crates/analysis/: Cargo.toml
crates/analysis/src/: const_overrides.rs  errors.rs  label_stack.rs  lib.rs
crates/ast/: Cargo.toml
crates/ast/src/: ast.rs  error.rs  grammar.lalrpop  lexer.rs  lib.rs  parser.rs  util.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  versions.rs
crates/compilation/: Cargo.toml
crates/compilation/src/: lib.rs
examples/: Ownable.huff  SimpleMacros.huff
examples/errors/: CompileError.huff  DuplicateDefs.huff  DuplicateLabel.huff  DuplicateMacro.huff  DuplicateMacroArg.huff  ErrorInIncluded.huff  Include.huff  JumpTableLabelNotFound.huff  LabelNotFound.huff  MacroArgCountMismatch.huff  MutualInclusion.huff  NotYetImplemented.huff  Recursive.huff  ReferenceNotFound.huff
examples/features/: CodeIntrospection.huff  CodeTable.huff  Constants.huff  CustomConstructor.huff  FuncSigUse.huff  JumpTable.huff  LabelResolution.huff  Quine.huff  Sig.huff
