[workspace]
resolver = "2"
members = ["crates/analysis", "crates/ast", "crates/cli", "crates/compilation"]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"

[workspace.dependencies]

# workspace
huff-ast = { path = "crates/ast" }
huff-analysis = { path = "crates/analysis" }
huff-compilation = { path = "crates/compilation" }

alloy-dyn-abi = "0.8"
alloy-primitives = "0.8"
ariadne = { version = "0.4.1", features = ["auto-color"] }
clap = { version = "4.5.20", features = ["derive"] }
evm-glue = { git = "https://github.com/Philogy/evm-glue.git", rev = "d0186623" }
chumsky = { git = "https://github.com/zesterer/chumsky.git", rev = "716bec8" }

[profile.profiling]
inherits = "release"
debug = true
