[package]
name = "huff-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
huff-ast.workspace = true
huff-analysis.workspace = true
huff-compilation.workspace = true
evm-glue.workspace = true

ariadne.workspace = true
clap.workspace = true
thiserror.workspace = true
hex = "0.4.3"

[[bin]]
name = "huff"
path = "src/main.rs"
